<?xml version="1.0"?>
<package format="2">
    <name>fssim</name>
    <version>0.0.0</version>
    <description>The fssim_common package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="kabzanj@gmail.com">Juraj Kabzan</maintainer>
    <license>MIT</license>
    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <depend>fssim_common</depend>
    <depend>fssim_description</depend>
    <depend>fssim_gazebo</depend>
    <depend>fssim_gazebo_plugins</depend>
    <depend>fssim_rqt_plugins</depend>
    <depend>fssim-shapely</depend>
    <depend>fssim-subprocess32</depend>
    <depend>fssim-xacro</depend>

</package>
