<?xml version="1.0"?>
<package format="2">
  <name>fssim_gazebo</name>
  <version>0.0.0</version>
  <description>The fssim_gazebo package</description>

  <maintainer email="kabzanj@gmail.com">Juraj Kabzan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/.."/>
  </export>
</package>
