<?xml version="1.0"?>
<package format="2">
  <name>fssim_rqt_plugins</name>
  <version>0.0.0</version>
  <description>The fssim_rqt_plugins package</description>

  <maintainer email="kabzanj@gmail.com">Juraj Kabzan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rqt_fssim_track_editor</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
